# infrared_study

./: README.md
infrared_study/: .autotools  .cproject  .project  CMakeLists.txt
infrared_study/doc/: armIrdaonePort.C
infrared_study/include/: config.h  infrared.h  key_reset.h  led.h  log.h  protocol_define.h
infrared_study/src/: CMakeLists.txt
infrared_study/src/device/: CMakeLists.txt  infrared.c  key_reset.c  led.c  serial.c  serial.h
infrared_study/src/main/: CMakeLists.txt  ir_study.c  ir_study.h  main.c
infrared_study/src/protocol/: CMakeLists.txt  protocol.c  protocol.h
infrared_study/src/utils/: CMakeLists.txt  log.c  task_queue.c  task_queue.h  util_queue.c  util_queue.h
